--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4010,7 +4010,7 @@
   device:
     type: tablet
     brand: CHIA
-    model: GTA7WF
+    model: A7 ROJA
   os_family: Android
   browser_family: Chrome
 -
@@ -4050,7 +4050,7 @@
   os_family: Android
   browser_family: Android Browser
 -
-  user_agent: Mozilla/5.0 (Linux; U; Android 4.4.2;  zh-cn; SUPRA M74AG; Android/4.4.2; Release/11.05.2015)  AppleWebKit/534.30 (KHTML, like Gecko) Mobile Safari/534.30
+  user_agent: 'Mozilla/5.0 (Linux; U; Android 4.4.2;  zh-cn; SUPRA M74AG; Android/4.4.2; Release/11.05.2015)  AppleWebKit/534.30 (KHTML, like Gecko) Mobile Safari/534.30'
   os:
     name: Android
     version: 4.4.2
@@ -4823,7 +4823,8 @@
     model: Ursus L270
   os_family: Android
   browser_family: Chrome
-- user_agent: Mozilla/5.0 (Linux; Android 9; L210) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Safari/537.36
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; L210) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Safari/537.36
   os:
     name: Android
     version: "9"
@@ -7428,7 +7429,6 @@
     model: M9 Pro
   os_family: Android
   browser_family: Chrome
-
 -
   user_agent: Mozilla/5.0 (Linux; Android 5.1; QTab V7 Build/LMY47I; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.101 Safari/537.36
   os:
@@ -7735,3 +7735,251 @@
     model: ZenPad C 7.0
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; PMP7070C3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: MultiPad 4 Diamond 7.0" 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Play Three v3.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Pixus
+    model: Play Three v3.0
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Navon_Predator_7 Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.83 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 47.0.2526.83
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Navon
+    model: Predator 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 6.0; en-US; Plane 8733T 3G PS8145PG Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.9.7.1153 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 12.9.7.1153
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Digma
+    model: Plane 8733T 3G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; QUANTUM_1010_Lite Build/GOCLEVER.V01) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.111 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 63.0.3239.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: GOCLEVER
+    model: Quantum 1010 Lite
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; LGT02) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.210 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 90.0.4430.210
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad III 8.0
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-T375S) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.210 Safari/537.36
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 90.0.4430.210
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab E 8.0"
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Notepad_K10 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.141 Safari/537.36 GSA/11.43.6.23.arm
+  os:
+    name: Android
+    version: "9"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.43.6.23
+  device:
+    type: tablet
+    brand: Dragon Touch
+    model: Notepad K10
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Notepad 102) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.101 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 87.0.4280.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Dragon Touch
+    model: Notepad 102
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; GTKIDS7V Build/NHG47K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.111 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 63.0.3239.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: CHIA
+    model: GT KIDS 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; GTKIDS7R Build/NHG47K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/84.0.4147.111 Safari/537.36 GSA/11.21.9.21.arm
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.21.9.21
+  device:
+    type: tablet
+    brand: CHIA
+    model: GT KIDS 7
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; GTKIDS7B) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 84.0.4147.125
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: CHIA
+    model: GT KIDS 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 6.0; MiXzo ME 1030 4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.96 YaBrowser/20.4.0.237.01 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.4.0.237.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MiXzo
+    model: ME1030 4G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; TECNO P701 Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.137 Mobile Safari/537.36 OPR/51.0.2254.150679
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 51.0.2254.150679
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Tecno Mobile
+    model: DroidPad 7D
+  os_family: Android
+  browser_family: Opera
