--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -89,6 +89,10 @@ HTC:
     # explicit smartphone models
     - regex: '2PZC5(?:[);/ ]|$)'
       model: 'U11'
+    - regex: 'U11 plus(?:[);/ ]|$)'
+      model: 'U11 Plus'
+    - regex: 'U11 life(?:[);/ ]|$)'
+      model: 'U11 Life'
     - regex: 'XV6975(?:[);/ ]|$)'
       model: 'Imagio'
     - regex: 'PG86100(?:[);/ ]|$)'
@@ -508,9 +512,9 @@ RIM:
     - regex: 'BlackBerry'
       model: 'BlackBerry'
 
-# CHIA
+# CHIA (www.ghia.com.mx)
 CHIA:
-  regex: '(SVEGLIO[ _][QH]1|TREO_TAB8G|GTA7WF|VENUS7)(?:[);/ ]|$)'
+  regex: '(SVEGLIO[ _][QH]1|TREO_TAB8G|GTA7WF|GTKIDS7[BVR]|VENUS7)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'SVEGLIO[ _]([QH]1)'
@@ -520,7 +524,10 @@ CHIA:
       model: 'TREO TAB8G'
     - regex: 'GTA7WF'
       device: 'tablet'
-      model: 'GTA7WF'
+      model: 'A7 ROJA'
+    - regex: 'GTKIDS7[BVR]'
+      device: 'tablet'
+      model: 'GT KIDS 7'
     - regex: 'VENUS7'
       device: 'tablet'
       model: 'VENUS 7'
@@ -543,7 +550,7 @@ Palm:
 
 # HP or Hewlett-Packard
 HP:
-  regex: 'Hewlett-Packard|HP/HP|HP EliteBook 820|TouchPad/\d+\.\d+|hp-tablet|HP ?iPAQ|webOS.*P160U|HP (?:Pro )?Slate|HP [78]|HP 10 Plus|Compaq [7|8]|HP; [^;/)]+'
+  regex: 'Hewlett-Packard|HP/HP|HP Chromebook|HP EliteBook 820|TouchPad/\d+\.\d+|hp-tablet|HP ?iPAQ|webOS.*P160U|HP (?:Pro )?Slate|HP [78]|HP 10 Plus|Compaq [7|8]|HP; [^;/)]+'
   device: 'smartphone'
   models:
     - regex: 'HP Slate 6 Voice Tab'
@@ -583,6 +590,9 @@ HP:
     - regex: 'HP ProBook (6560b)'
       device: 'desktop'
       model: 'ProBook $1'
+    - regex: 'Chromebook (11 G5|x360 11 G1 EE|13 G1)'
+      device: 'desktop'
+      model: 'Chromebook $1'
     - regex: 'HP EliteBook 820 G2'
       device: 'desktop'
       model: 'EliteBook 820 G2'
@@ -1075,6 +1085,14 @@ MicroMax:
       model: 'Infinity N11'
     - regex: 'N8301'
       model: 'Infinity N12'
+    - regex: 'Q440Plus(?:[);/ ]|$)'
+      model: 'Q440 Plus'
+    - regex: 'Micromax[_ ]Q353P(?:[);/ ]|$)'
+      model: 'Q353 Plus'
+    - regex: 'Q452(?:[);/ ]|$)'
+      model: 'Spark 4G Prime'
+    - regex: 'Q4601(?:[);/ ]|$)'
+      model: 'Selfie 2 Note'
 
     - regex: 'MicroMax(?:[ \-\_])?(X291|X246|X252|X458|X312)'
       model: '$1'
@@ -2946,14 +2964,12 @@ Blackview:
       model: '$1 Plus'
     - regex: '(BV6000S)'
       model: '$1'
-    - regex: '(BV9[78]00|BL6000)Pro'
+    - regex: '(BL6000|BV(?:[48]000|5500|9[5678]00|6[38]00))Pro'
       model: '$1 Pro'
     - regex: 'Blackview (A[78]|E7S)'
       model: '$1'
     - regex: 'BV9000Pro-F'
       model: 'BV9000 Pro F'
-    - regex: '(BV([48]000|9[56]00|6[83]00))Pro'
-      model: '$1 Pro'
     - regex: '(BV6[13]00)(?:[);/ ]|$)'
       model: '$1'
       device: 'phablet'
@@ -3136,6 +3152,8 @@ Vivo:
       model: 'V20'
     - regex: 'V2040(?:[);/ ]|$)'
       model: 'V20 (2021)'
+    - regex: 'Vivo 1921(?:[);/ ]|$)'
+      model: 'U20'
     - regex: 'vivo 1805(?:[);/ ]|$)'
       model: 'Nex'
     - regex: 'V1923A(?:[);/ ]|$)'
@@ -3178,7 +3196,7 @@ Vivo:
       model: 'V15'
     - regex: 'vivo 1818(?:[);/ ]|$)'
       model: 'V15 Pro'
-    - regex: 'vivo 1909(?:[);/ ]|$)'
+    - regex: 'vivo 19(?:10|09)(?:[);/ ]|$)'
       model: 'V17 Pro'
     - regex: 'vivo 1907(?:_19)?(?:[);/ ]|$)'
       model: 'V17 Neo'
@@ -3320,6 +3338,8 @@ Vivo:
       model: 'Y83 Pro'
     - regex: 'V1730EA(?:[);/ ]|$)'
       model: 'Y89'
+    - regex: 'vivo 1823(?:[);/ ]|$)'
+      model: 'Y90'
     - regex: 'vivo 181[17](?:[);/ ]|$)'
       model: 'Y91'
     - regex: 'V1945A(?:[);/ ]|$)'
@@ -6456,8 +6476,13 @@ GOCLEVER:
     - regex: 'TQ700N'
       model: 'QUANTUM 700N'
       device: 'tablet'
+    - regex: 'QUANTUM_1010_Lite'
+      model: 'Quantum 1010 Lite'
+      device: 'tablet'
     - regex: 'Quantum2 500'
       model: 'Quantum 2 500'
+    - regex: 'QUANTUM[_ ]([45]00)[_ ]LITE'
+      model: 'Quantum $1 Lite'
     - regex: '((?:QUANTUM|ARIES|INSIGNIA|ORION|ELIPSO)[ _-]?[^;/]+)(?: Build|\))'
       model: '$1'
     - regex: 'GOCLEVER[ _-]TAB[ _-]?([^;/]+) Build'
@@ -9634,6 +9659,8 @@ LG:
       model: 'Zone 4'
     - regex: 'LM-X220PM'
       model: 'Tribute Empire'
+    - regex: 'LGLS675'
+      model: 'Tribute 5'
     - regex: 'VS980|L-01F|LG-F320L'
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
@@ -9656,7 +9683,7 @@ LG:
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:0DS|3)'
+    - regex: 'VS988|LG-H87(?:0DS|[23])|LGUS997'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9722,7 +9749,9 @@ LG:
       model: 'Stylo 2 V'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
-    - regex: 'LG-LS777(?:[);/ ]|$)'
+    - regex: 'LG-?(?:MS631)(?:[);/ ]|$)'
+      model: 'G Stylo'
+    - regex: 'LG-?(?:LS777|L84VL)(?:[);/ ]|$)'
       model: 'Stylo 3'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
@@ -9736,6 +9765,8 @@ LG:
       model: 'Fortune 2'
     - regex: 'LM-X410\.F(?:[);/ ]|$)'
       model: 'Premier Pro'
+    - regex: 'LGL455DL(?:[);/ ]|$)'
+      model: 'Premier Pro Plus'
     - regex: 'LML41[34]DL(?:[);/ ]|$)'
       model: 'Premier Pro LTE'
     - regex: 'LM-X525'
@@ -9766,6 +9797,8 @@ LG:
       model: 'X4 (2019)'
     - regex: '(?:LG-X230|VS425)(?:[);/ ]|$)'
       model: 'K4'
+    - regex: 'LG-K130(?:[);/ ]|$)'
+      model: 'K4 LTE'
     - regex: 'LG-M160(?:[);/ ]|$)'
       model: 'K4 (2017)'
     - regex: 'LM-X420'
@@ -9950,6 +9983,9 @@ LG:
       device: 'tablet'
     - regex: 'LG-V935'
       model: 'G Pad II 10.1'
+      device: 'tablet'
+    - regex: 'LGT02'
+      model: 'G Pad III 8.0'
       device: 'tablet'
     - regex: 'LG-V521'
       model: 'G Pad X 8.0'
@@ -10257,11 +10293,13 @@ Mpman:
 
 # Majestic
 Majestic:
-  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|TAB (?:647|411) 3G|URANO 77LTE'
+  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|(?:TAB (?:647|411) 3G|URANO 77LTE|PLUTO__?26N?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'URANO 77LTE(?:[);/ ]|$)'
       model: 'Urano 77 LTE'
+    - regex: 'PLUTO__?(26N?)(?:[);/ ]|$)'
+      model: 'Pluto $1'
     - regex: 'TAB (647|411) 3G'
       model: 'Tab $1 3G'
       device: 'tablet'
@@ -11067,6 +11105,8 @@ Motorola:
       model: 'Moto E5 Play'
     - regex: 'Moto E5 go(?:[);/ ]|$)'
       model: 'Moto E5 Go'
+    - regex: 'Moto E6 Play(?:[);/ ]|$)'
+      model: 'Moto E6 Play'
     - regex: 'Moto E\(?([67])\)?(?:[);/ ]|$)'
       model: 'Moto E$1'
     - regex: '(?:MOT-|Motorola-)?XT1030'
@@ -11117,10 +11157,22 @@ Motorola:
       model: 'P30 Play'
     - regex: '(?:MOT-|Motorola-)?XT1942-1'
       model: 'P30 Note'
-    - regex: '(?:MOT-|Motorola-)?XT1970-5'
+    - regex: '(?:MOT-|Motorola-)?edge plus'
+      model: 'Edge Plus'
+    - regex: '(?:MOT-|Motorola-)?edge'
+      model: 'Edge'
+    - regex: '(?:MOT-|Motorola-)?(?:XT1970-5|one vision)'
       model: 'One Vision'
+    - regex: '(?:MOT-|Motorola-)?one power'
+      model: 'One Power'
+    - regex: '(?:MOT-|Motorola-)?one hyper'
+      model: 'One Hyper'
     - regex: '(?:MOT-|Motorola-)?one zoom'
       model: 'One Zoom'
+    - regex: '(?:MOT-|Motorola-)?one fusion\+'
+      model: 'One Fusion Plus'
+    - regex: '(?:MOT-|Motorola-)?one fusion'
+      model: 'One Fusion'
     - regex: 'motorola one action'
       model: 'One Action'
     - regex: 'motorola one macro'
@@ -11368,13 +11420,16 @@ Navon:
       model: 'Pure Micro'
     - regex: 'Navon[_ ]Infinity(?:[);/ ]|$)'
       model: 'Infinity'
+    - regex: 'Navon[_ ](D405)(?:[);/ ]|$)'
+      model: '$1'
+
     - regex: '(?:Navon[_ ])?Platinum[ _]10[ _]3G(_V2)?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Platinum 10.1" 3G$1'
     - regex: '(?:Navon[_ ])?Orpheus[ _]3G(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Orpheus 3G'
-    - regex: 'Predator (3G|10)(?:[);/ ]|$)'
+    - regex: '(?:Navon_)?Predator[_ ](3G|10|7)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Predator $1'
     - regex: 'Raptor3G8GB(?:[);/ ]|$)'
@@ -12029,14 +12084,14 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[1579]|11|3[13]|2[157]|[45]1|45)|32(?:01|31)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|31)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
       model: '1'
     - regex: 'RMX180[59]'
       model: '2'
-    - regex: 'RMX180[17]'
+    - regex: 'RMX180[137]'
       model: '2 Pro'
     - regex: 'RMX(1833|182[15])'
       model: '3'
@@ -12711,7 +12766,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671H|T790Y|T766H_EEA|T766A|T799[BH]|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A50[27]DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671H|T790Y|T766H_EEA|T766A|T799[BH]|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -12736,6 +12791,8 @@ TCL:
       model: '$1'
     - regex: 'A502DL(?:[);/ ]|$)'
       model: 'LX'
+    - regex: 'A507DL(?:[);/ ]|$)' # TracFone A507DL
+      model: 'A2'
     - regex: '5159[AJ](?:[);/ ]|$)'
       model: 'L9'
     - regex: 'T770H(?:[);/ ]|$)'
@@ -12799,12 +12856,12 @@ Pioneer:
 
 # Pixus
 Pixus:
-  regex: 'Pixus|(hiPower|Ride[_ ][34]G|Play[ _]Three[ _]v(?:[24].0|3.1))(?:[);/ ]|$)'
+  regex: 'Pixus|(hiPower|Ride[_ ][34]G|Play[ _]Three[ _]v(?:[234].0|3.1))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Ride[_ ]([34])G'
       model: 'Ride $1G'
-    - regex: 'Play[ _]Three[ _]v([24].0|3.1)'
+    - regex: 'Play[ _]Three[ _]v([234].0|3.1)'
       model: 'Play Three v$1'
     - regex: 'Play Two'
       model: 'Play Two'
@@ -14866,7 +14923,9 @@ Prestigio:
       model: 'Muze C3'
     # explicit tables models
     - regex: 'PMT3277_3G'
-      model: 'MultiPad Ranger 7.0 3G'
+      model: 'MultiPad Ranger 7.0" 3G'
+    - regex: 'PMP7070C3G'
+      model: 'MultiPad 4 Diamond 7.0" 3G'
     - regex: 'PGPS7799CIS08GBPG(?:[);/ ]|$)'
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
@@ -14973,6 +15032,8 @@ QMobile:
       model: 'Jazz X JS$1'
     - regex: 'Noir X1S'
       model: 'Noir X1S'
+    - regex: 'A600(?:[);/ ]|$)'
+      model: 'Noir A600'
     - regex: 'E2 Noir'
       model: 'E2 Noir'
     - regex: 'Hot Pro 2'
@@ -14991,6 +15052,8 @@ QMobile:
       model: 'Q Infinity $1'
     - regex: '(LT950)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'QMobile ENERGY (X[12])(?:[);/ ]|$)'
+      model: 'Energy $1'
     # general detections
     - regex: 'QTab[ _-]([^;/]+) Build'
       model: '$1 Tab'
@@ -15370,12 +15433,12 @@ Star:
 
 # Starmobile (starmobile.ph)
 Starmobile:
-  regex: '(?:Starmobile (?:Play (?:Neo|Spark|GO|Click))|UP[_ ](?:Sense|Rave|Groove|Prime|Selfie|Xtreme|XL))(?:[);/ ]|$)'
+  regex: '(?:Starmobile (?:Play (?:Neo|Spark|GO|Click))|UP[_ ](?:Sense|Rave|Groove|Prime|Selfie|Xtreme|XL)|PLAY (?:Club|Style))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Starmobile PLAY GO(?:[);/ ]|$)'
       model: 'Play Go'
-    - regex: 'Starmobile Play (Neo|Spark|Click)(?:[);/ ]|$)'
+    - regex: '(?:Starmobile )?Play (Neo|Spark|Click|Club|Style)(?:[);/ ]|$)'
       model: 'Play $1'
     - regex: 'UP[_ ](Sense|Rave|Groove|Prime|Selfie|Xtreme|XL)(?:[);/ ]|$)'
       model: 'UP $1'
@@ -15596,6 +15659,9 @@ Tecno Mobile:
       model: 'Camon iSky 3'
     - regex: 'Tecno[ _]7C(?:[);/ ]|$)'
       model: 'DroidPad 7C'
+      device: 'tablet'
+    - regex: 'Tecno[ _]P701(?:[);/ ]|$)'
+      model: 'DroidPad 7D'
       device: 'tablet'
     - regex: 'DP7C Pro-SGA1(?:[);/ ]|$)'
       model: 'DroidPad 7C Pro'
@@ -16305,9 +16371,9 @@ Vastking:
     - regex: '(M910A|M783K|M783K-16G|M1072R-3G)(?:[);/ ]|$)'
       model: '$1'
 
-# ViewSonic
+# ViewSonic (viewsonic.com)
 ViewSonic:
-  regex: 'ViewSonic|VSD[0-9]+(?:[);/ ]|$)|ViewPad|ViewPhone'
+  regex: 'ViewSonic|ViewPad|ViewPhone|(?:IFP(?:98|86|[67]5)50-3|VSD[0-9]+)(?:[);/ ]|$)'
   device: 'smart display'
   models:
     - regex: '(?:ViewSonic-)?V500(?:[);/ ]|$)'
@@ -16324,6 +16390,8 @@ ViewSonic:
       device: 'tablet'
     - regex: '(VSD[0-9]+)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'IFP(98|86|[67]5)50-3'
+      model: 'ViewBoard IFP$150-3 $1" 4K'
 
 # Vitelcom
 Vitelcom:
@@ -16623,6 +16691,8 @@ Vodafone:
       model: 'Smart Turbo 7'
     - regex: 'VFD 51[013]'
       model: 'Smart E8'
+    - regex: 'VFD 527'
+      model: 'Smart E9'
     - regex: 'VFD 600'
       model: 'Smart Prime 7'
     - regex: 'VFD320'
@@ -16631,6 +16701,10 @@ Vodafone:
       model: 'Smart X9'
     - regex: 'VFD 610'
       model: 'Smart N8'
+    - regex: 'VFD 630'
+      model: 'Smart N10'
+    - regex: 'VFD 620'
+      model: 'Smart N9 Lite'
     - regex: 'VFD 630'
       model: 'Smart N10'
     - regex: 'Smart ultra 6'
@@ -17365,6 +17439,8 @@ Xiaomi:
       model: 'Redmi K30 Ultra'
     - regex: 'Redmi Y1 Lite(?:[);/ ]|$)'
       model: 'Redmi Y1 Lite'
+    - regex: 'Redmi 6 Pro(?:[);/ ]|$)'
+      model: 'Redmi 6 Pro'
 
       # specific tablet models
     - regex: 'MI PAD 4 PLUS(?:[);/ ]|$)'
@@ -20649,6 +20725,8 @@ Cloudfone:
   regex: 'CloudFone[ _]|(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro|NBA Edition)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'Thrill Boost 2 Plus(?:[);/ ]|$)'
+      model: 'Thrill Boost 2 Plus'
     - regex: 'Thrill Boost (2|3)(?:[);/ ]|$)'
       model: 'Thrill Boost $1'
     - regex: 'Thrill Boost(?:[);/ ]|$)'
@@ -20682,11 +20760,11 @@ Vsmart:
 
 # MiXzo
 MiXzo:
-  regex: '(?:MiXzo[ _])?(?:ME1023|ME ?1025|ME1030|MX1037|MX1024|MX10[24]1|MX1397)([ _][34]G)?(?:[);/ ]|$)'
+  regex: '(?:MiXzo[ _])?(?:ME ?10(?:2[35]|30)|MX1037|MX1024|MX10[24]1|MX1397)([ _][34]G)?(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: 'MiXzo[_ ]ME(1023|1030)(?:[_ ]3G)(?:[);/ ]|$)'
-      model: 'ME$1 3G'
+    - regex: 'MiXzo[_ ]ME ?(1023|1030)(?:[_ ]([34])G)(?:[);/ ]|$)'
+      model: 'ME$1 $2G'
     - regex: 'MiXzo[_ ]MX1021(?:[_ ]3G)?(?:[);/ ]|$)'
       model: 'MX1021 3G'
     - regex: '(?:MiXzo[ _])?MX(1037|1041|1024|1397)[ _]4G(?:[);/ ]|$)'
@@ -23151,4 +23229,10 @@ VAVA:
 ivvi:
   regex: 'ivvi[ _](F1S|F2C|V1M-S|V2|i1-S)(?:[);/ ]|$)'
   device: 'smartphone'
+  model: '$1'
+
+# Dragon Touch (dragontouch.com)
+Dragon Touch:
+  regex: '(Notepad[_ ](?:K10|102))(?:[);/ ]|$)'
+  device: 'tablet'
   model: '$1'
