--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9744,7 +9744,7 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SKL]|LG-?LS992'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SKL]|LG-?[LU]S992'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
@@ -9786,6 +9786,10 @@ LG:
       model: 'Risio 2'
     - regex: 'LGM-K120[LSK]'
       model: 'X300'
+    - regex: 'LGM-X401S'
+      model: 'X400'
+    - regex: 'LGM-X320[SKL]?(?:[);/ ]|$)'
+      model: 'X500'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
     - regex: '(L-05[DE])(?:[);/ ]|$)'
@@ -9800,7 +9804,7 @@ LG:
       model: 'PRADA phone L-02D'
     - regex: 'L-07C'
       model: 'Optimus Bright L-07C'
-    - regex: '(?:LG-)?(?:F800[SKL]?|H990|US996)'
+    - regex: '(?:LG-?)?(?:F800[SKL]?|H990|US996|V34|LS997)(?:[);/ ]|$)'
       model: 'V20'
     - regex: 'LM-Q710(?:\(FGN\)|[\.]?FGN)'
       model: 'Q Stylus Plus'
@@ -9816,6 +9820,8 @@ LG:
       model: 'Q7+'
     - regex: 'LM-Q815[SL](?:[);/ ]|$)'
       model: 'Q8+'
+    - regex: 'LGM-X800[KL]'
+      model: 'Q8'
     - regex: 'LM-Q925[LKS](?:[);/ ]|$)'
       model: 'Q9'
     - regex: 'LM-(?:Q730N|Q620)(?:[);/ ]|$)'
@@ -9826,6 +9832,8 @@ LG:
       model: 'Style'
     - regex: 'L-01L(?:[);/ ]|$)'
       model: 'Style 2'
+    - regex: 'LGLS775'
+      model: 'Stylo 2'
     - regex: 'VS835(?:[);/ ]|$)'
       model: 'Stylo 2 V'
     - regex: 'LGMS550'
@@ -9836,7 +9844,7 @@ LG:
       model: 'G Stylo'
     - regex: 'LG-?(?:LS777|L84VL|M430)(?:[);/ ]|$)'
       model: 'Stylo 3'
-    - regex: 'LG-?(TP450)(?:[);/ ]|$)'
+    - regex: 'LG-?([TM]P450)(?:[);/ ]|$)'
       model: 'Stylo 3 Plus'
     - regex: 'LM-Q710|LML713DL|LG-Q710[AP]L'
       model: 'Stylo 4'
@@ -9898,7 +9906,7 @@ LG:
       model: 'K4'
     - regex: 'LG-K130(?:[);/ ]|$)'
       model: 'K4 LTE'
-    - regex: 'LG-M160(?:[);/ ]|$)'
+    - regex: '(?:LG-?)?(?:M160|L57BL)(?:[);/ ]|$)'
       model: 'K4 (2017)'
     - regex: 'LM-X420'
       model: 'K40'
@@ -9938,7 +9946,7 @@ LG:
       model: 'Q92'
     - regex: 'LM-Q927L'
       model: 'Q9 One'
-    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[0128]|VS990)'
+    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[02128]|VS990)'
       model: 'V10'
     - regex: 'LG-(?:X240|M200)'
       model: 'K8 (2017)'
@@ -9948,7 +9956,7 @@ LG:
       model: 'K8 4G'
     - regex: '(?:LG-)?VS500'
       model: 'K8 V'
-    - regex: 'LM-X212\(G\)'
+    - regex: 'LM-X212\(G\)|LGUS215'
       model: 'K8 (2018)'
     - regex: '(?:LG-)?(?:VS995|F800K|US999|LS997|H91[058]|H990(?:DS|[NT])?)'
       model: 'V20'
@@ -9974,7 +9982,7 @@ LG:
       model: 'Optimus Zone 2'
     - regex: '(?:LG-)?VS425PP'
       model: 'Optimus Zone 3'
-    - regex: '(?:LG-)?K100'
+    - regex: '(?:LG-?)?(?:K100|LS450)'
       model: 'K3'
     - regex: 'LG-AS110'
       model: 'K3 (2017)'
@@ -9984,7 +9992,7 @@ LG:
       model: 'K8'
     - regex: 'VS500PP'
       model: 'K8 V'
-    - regex: '(?:LG-)?(?:K420(?:N)?|F670[KLS]?|K430(?:DS|DSF|DSY)?|K410)'
+    - regex: '(?:LG-?)?(?:K420(?:N)?|F670[KLS]?|K430(?:DS|DSF|DSY)?|K410|MS428)'
       model: 'K10'
     - regex: '(?:LG-)?M250N?'
       model: 'K10 (2017)'
@@ -10014,7 +10022,7 @@ LG:
       model: 'W30'
     - regex: 'LGV36(?:[);/ ]|$)'
       model: 'it'
-    - regex: '(?:LG-?)?K220'
+    - regex: '(?:LG-?)?(?:K220|LS755)'
       model: 'X Power'
     - regex: '(?:LG-?)?M320'
       model: 'X Power 2'
