--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9726,7 +9726,7 @@ LG:
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
-    - regex: 'LG-D85[01258]|VS985|LGLS990'
+    - regex: 'LG-D85[012568]|VS985|LGLS990'
       model: 'G3'
     - regex: 'LG-D693n?|LG-D690n'
       model: 'G3 Stylus'
@@ -9780,7 +9780,7 @@ LG:
       model: 'Magna'
     - regex: 'LG-(?:X15[05]|X165g)'
       model: 'Bello 2'
-    - regex: 'LG-D335'
+    - regex: 'LG-D33[15]'
       model: 'L Bello'
     - regex: 'LG-D29[05]'
       model: 'L Fino'
